# AItoType

./: .gitignore  LICENSE  README.md
.github/workflows/: build-release.yml
docs/: competitive_analysis.md  feature_requirements_summary.md  gemini-chat-20260205-224426.md  openrouter_gemini_integration.md
plans/active/: plan001_aitotype_development.md  plan007_shortcut_customization.md
poc/: Cargo.toml
poc/designmode/: DESIGN_SYSTEM.md  aitotype_main_hifi_prototype.html  aitotype_settings_hifi_prototype.html
poc/src/: api.rs  audio.rs  keyboard.rs  main.rs
src/aitotype/: package-lock.json  package.json
src/aitotype/scripts/: tauri-build.mjs
src/aitotype/src/: index.html  main.js  overlay.css  overlay.html  overlay.js  styles.css
src/aitotype/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src/aitotype/src-tauri/icons/: icon.icns
src/aitotype/src-tauri/src/: audio.rs  corrections.rs  keyboard.rs  lib.rs  logging.rs  main.rs  stt.rs
