[package]
name = "aitotype_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
# 模拟键盘输入
enigo = "0.2"

# 音频录制
cpal = "0.15"
hound = "3.5"

# HTTP 请求
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }

# JSON 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 剪贴板
arboard = "3"

# 环境变量
dotenv = "0.15"

# Base64 编码
base64 = "0.22"
